parcel in webpack out

--- a/server/views/sample/index.handlebars
+++ b/server/views/sample/index.handlebars
@@ -1,5 +1,9 @@
+<script>
+  window.__initialState__ = {{{initialState}}}
+</script>
+
 {{prefixScript '/static/js/app/view/indexModule.js'}}
-{{prefixScript '/static/js/app.js' 'scripts'}}
+{{prefixScript '/static/app.js' 'scripts'}}
 
 <div class="col">
   <h1>node-web</h1>
