--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -13,11 +13,11 @@
     {{/if}}
 
     {{prefixStyle '/static/kth-style/css/kth-bootstrap.min.css' 'styles' 'screen'}}
-    {{prefixStyle '/static/css/node-web.css' 'styles' 'screen'}}
+    {{prefixStyle '/static/app.css' 'styles' 'screen'}}
 
     {{{render 'styles'}}}
 
-    {{prefixScript '/static/js/vendor.js' 'head-scripts'}}
+    {{prefixScript '/static/vendor.js' 'head-scripts'}}
     {{prefixScript '/static/browserConfig' 'head-scripts'}}
     {{#extend 'head-scripts'}}
       <script src="//www.kth.se/social/toolbar/widget.js"></script>
