Added hostname to _about

--- a/server/views/system/about.handlebars
+++ b/server/views/system/about.handlebars
@@ -40,6 +40,10 @@
   <td><b>Docker Version:</b></td>
   <td>{{{dockerVersion}}}</td>
 </tr>
+<tr class="even">
+    <td><b>Hostname:</b></td>
+    <td>{{{hostname}}}</td>
+  </tr>
 </table>
 
 <dl>
