Server-side rendering fixed

--- a/server/views/sample/index.handlebars
+++ b/server/views/sample/index.handlebars
@@ -1,5 +1,5 @@
 <script>
-  window.__initialState__ = {{{initialState}}}
+  {{{compressedStoreCode}}}
 </script>
 
 <!--{{prefixScript '/static/app.js' 'scripts'}}-->
@@ -13,4 +13,3 @@
     <div id="app">{{{html}}}</div>
   {{/if}}
 </div>
-
