--- a/server/views/layouts/systemLayout.handlebars
+++ b/server/views/layouts/systemLayout.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <link rel="shortcut icon" id="favicon" href="/node/static/icon/favicon">
+    <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
     <title>System page</title>
 
     {{#if debug}}
