Updated kth-style, kth-node-web-common and some resourse paths

--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>KTH | {{title}}</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{description}}">
-    <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
 
-    {{#if canonicalUrl}}
-      <link href="{{canonicalUrl}}" rel="canonical">
-    {{/if}}
+<head>
+  <title>KTH | {{title}}</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="{{description}}">
+  <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
 
-    {{prefixStyle '/static/kth-style/css/kth-bootstrap.min.css' 'styles' 'screen'}}
-    {{prefixStyle '/static/app.css' 'styles' 'screen'}}
+  {{#if canonicalUrl}}
+  <link href="{{canonicalUrl}}" rel="canonical">
+  {{/if}}
 
-    {{{render 'styles'}}}
+  {{prefixStyle '/static/kth-style/css/kth-bootstrap.css' 'styles' 'screen'}}
+  {{prefixStyle '/static/app.css' 'styles' 'screen'}}
 
-    {{prefixScript '/static/vendor.js' 'head-scripts'}}
-    {{prefixScript '/static/browserConfig' 'head-scripts'}}
-    {{#extend 'head-scripts'}}
-      <script src="//www.kth.se/social/toolbar/widget.js"></script>
-      <!-- analytics start -->
-      {{{blocks.analytics}}}
-      <!-- analytics end -->
-    {{/extend}}
+  {{{render 'styles'}}}
 
-    {{#if debug}}
-      {{prefixScript '/static/js/lib/firebug-lite/build/firebug-lite.js' 'head-scripts'}}
-    {{/if}}
+  {{prefixScript '/static/vendor.js' 'head-scripts'}}
+  {{prefixScript '/static/browserConfig' 'head-scripts'}}
+  {{#extend 'head-scripts'}}
+  <script src="//www.kth.se/social/toolbar/widget.js"></script>
 
-    {{{render 'head-scripts'}}}
-  </head>
-  <body>
-    <a class="skipToMainContent" href="#mainContent" tabindex="1">{{i18n 'skip_to_main_content' lang}}</a>
-    {{> kthHeader }}
-    <div class="container main">
-      <div class="row">
-        <div class="col app">
-          {{{body}}}
-        </div>
+  <!-- analytics start -->
+  {{{blocks.analytics}}}
+  <!-- analytics end -->
+  {{/extend}}
+
+  {{{render 'head-scripts'}}}
+</head>
+
+<body>
+  <a class="skipToMainContent" href="#mainContent" tabindex="1">{{i18n 'skip_to_main_content' lang}}</a>
+  {{> kthHeader }}
+  <div class="container main">
+    <div class="row">
+      <div class="col app">
+        {{{body}}}
       </div>
     </div>
-    {{> kthFooter }}
-    {{{render 'scripts'}}}
-  </body>
+  </div>
+  {{> kthFooter }}
+  {{{render 'scripts'}}}
+</body>
+
 </html>
