--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -20,6 +20,9 @@
 
   {{prefixScript '/static/vendor.js' 'head-scripts'}}
   {{prefixScript '/static/browserConfig' 'head-scripts'}}
+  {{prefixScript '/static/kth-style/js/menus.js' 'head-scripts'}}
+  {{prefixScript '/static/kth-style/js/backtotop.js' 'head-scripts'}}
+
   {{#extend 'head-scripts'}}
   <script src="//www.kth.se/social/toolbar/widget.js"></script>
 
