--- a/server/views/layouts/systemLayout.handlebars
+++ b/server/views/layouts/systemLayout.handlebars
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
-  <head>
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
-    <title>System page</title>
-
-    {{#if debug}}
-      {{prefixScript '/static/js/lib/firebug-lite/build/firebug-lite.js' 'head-scripts'}}
-    {{/if}}
-
-    {{{render 'head-scripts'}}}
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+<head>
+  <meta name="robots" content="noindex">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
+{{#if title}}
+  <title>{{title}}</title>
+{{else}}
+  <title>System page</title>
+{{/if}}
+  {{{render 'head-scripts'}}}
+</head>
+<body>
+  {{{body}}}
+</body>
 </html>
