--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -33,8 +33,8 @@
 <body>
   <a class="skipToMainContent" href="#mainContent" tabindex="1">{{i18n 'skip_to_main_content' lang}}</a>
   {{> kthHeader }}
-  <div class="container main">
-    <div class="row">
+  <div class="container main standard withMainMenu">
+    <div class=" row">
       <div class="col app">
         {{{body}}}
       </div>
