fix(KP-115): hide table on embedded page when no results are found

--- a/server/views/embedded/fovsearch.handlebars
+++ b/server/views/embedded/fovsearch.handlebars
@@ -73,6 +73,7 @@
         </div>
 
     </form>
+{{#if fovCoursesResults}}
 <table class="table">
     <thead>
         <tr>
@@ -89,3 +90,4 @@
         {{/each}}
     </tbody>
 </table>
+{{/if}}
