--- a/server/views/embedded/fovsearch.handlebars
+++ b/server/views/embedded/fovsearch.handlebars
@@ -75,7 +75,7 @@
     </form>
 {{#if fovCoursesResults}}
 <div class="table">
-    <table class="table">
+    <table>
         <thead>
             <tr>
                 <th scope="col">Kurskod</th>
