--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -16,3 +16,20 @@
 .search-instructions {
   @extend %long-text-font-style;
 }
+
+*[data-from-kopps]:hover {
+  background-color: #fcf8e3;
+}
+
+*[data-from-kopps]:hover:before {
+  content: 'KOPPS';
+  float: right;
+  margin-top: -1.5em;
+  padding: 0 0.75em;
+  background-color: #fab919;
+  color: white;
+  border-radius: 0.75em 0.75em 0 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: smaller;
+  font-weight: 600;
+}
