--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -40,6 +40,12 @@
   text-align: center;
 }
 
+.table b.course-comment {
+  font-weight: normal;
+  font-style: italic;
+  display: block;
+}
+
 .table td.credits {
   white-space: nowrap;
 }
