fix: statis path in handlebars for favicon

--- a/server/views/layouts/systemLayout.handlebars
+++ b/server/views/layouts/systemLayout.handlebars
@@ -9,7 +9,7 @@
 {{/if}}
   <meta name="robots" content="noindex">
   <meta charset="utf-8">
-  <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
+  <link rel="shortcut icon" id="favicon" href="/student/kurser/static/icon/favicon">
   {{{render 'head-scripts'}}}
 </head>
 <body>
