--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{description}}">
-  <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
+  <link rel="shortcut icon" id="favicon" href="/student/kurser/static/icon/favicon">
 
   {{#if canonicalUrl}}
     <link href="{{canonicalUrl}}" rel="canonical">
