--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -18,6 +18,11 @@
 
   {{{render 'styles'}}}
 
+  {{#if blocks.klaroConfig}}
+    {{{blocks.klaroConfig}}}
+    {{prefixScript '/static/kth-style/js/klaro-no-css.js' 'head-scripts'}}
+  {{/if}}
+
   {{prefixScript '/static/vendor.js' 'head-scripts'}}
   {{prefixScript '/static/browserConfig' 'head-scripts'}}
   {{prefixScript '/static/kth-style/js/menus.js' 'head-scripts'}}
