Added display none class

--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -86,3 +86,7 @@ body #gradientBorder {
 .block.megaMenu.navbar.navbar-light ul.menu.navbar-nav#megaMenu li.item.nav-item .menuItemContent .megaMenuBody {
   border-bottom: 5px solid #65656c;
 }
+
+.display-none {
+  display: none;
+}
