Added class for link

--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -90,3 +90,11 @@ body #gradientBorder {
 .display-none {
   display: none;
 }
+
+.link {
+  background: transparent;
+  text-decoration: underline;
+  color: #006cb7;
+  border: none;
+  padding: 0px;
+}
