--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -1,3 +1,4 @@
+@import '~bootstrap/scss/bootstrap';
 %long-text-font-style {
   font-family: Georgia, 'garamond pro', garamond, 'times new roman', times, serif;
   word-break: break-word;
