--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -1,4 +1,3 @@
-@import '~bootstrap/scss/bootstrap';
 %long-text-font-style {
   font-family: Georgia, 'garamond pro', garamond, 'times new roman', times, serif;
   word-break: break-word;
@@ -98,4 +97,21 @@ body #gradientBorder {
   color: #006cb7;
   border: none;
   padding: 0px;
+}
+
+@keyframes spinner-border {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-border {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: -0.125em;
+  border: 0.25em solid rgb(33, 37, 41);
+  border-right-color: transparent;
+  border-radius: 50%;
+  animation: 0.75s linear infinite spinner-border;
 }
