fix(KUI-808):  renaming

--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -36,7 +36,7 @@
   
   
   {{#if instrumentationKey}}
-    {{#if cookies}}
+    {{#if klaroAnalyticsConsentCookie}}
       <script type="text/javascript">
         var appInsights = window.appInsights || function (a) {
           function b(a) {
