fix: ajusted postion of pdf icon

--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -115,3 +115,7 @@ body #gradientBorder {
   border-radius: 50%;
   animation: 0.75s linear infinite spinner-border;
 }
+
+.pdf-link {
+  margin: 0;
+}
