--- a/server/views/partials/studentHeader.handlebars
+++ b/server/views/partials/studentHeader.handlebars
@@ -27,7 +27,7 @@
             </div>
           </nav>
         </div>
-        {{{blocks.studentSecondaryMenu}}}
+        {{{blocks.secondaryMenu}}}
       </div>
       <div class='header-container__bottom'>{{{blocks.studentMegaMenu}}} {{{blocks.studentSearch}}}</div>
     </div>
