add breadcrumbUtil and cleanup

--- a/server/views/partials/kthHeader.handlebars
+++ b/server/views/partials/kthHeader.handlebars
@@ -26,9 +26,10 @@
   </div>
   <div id="gradientBorder"></div>
 
-  <div class="container articleNavigation">
-    <div id="breadcrumbs-header" class="row justify-content-between">
-      {{!-- HERE WILL BE RENDERED REACT COMPONENT Breadcrumbs --}}
+  <div class='container articleNavigation'>
+    <div id='breadcrumbs-header' class='row justify-content-between'>
+      {{breadcrumbs breadcrumbsList lang}}
+      {{languageControl lang}}
     </div>
   </div>
 </header>
