--- a/server/views/partials/studentHeader.handlebars
+++ b/server/views/partials/studentHeader.handlebars
@@ -36,7 +36,8 @@
 
   <div class='container articleNavigation'>
     <div id='breadcrumbs-header' class='row justify-content-between'>
-      {{! HERE WILL BE RENDERED REACT COMPONENT Breadcrumbs }}
+      {{breadcrumbs breadcrumbsList lang}}
+      {{languageControl lang}}
     </div>
   </div>
 </header>
