move toolbar url to serverSettings

--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -32,6 +32,7 @@
     <script src="//www.kth.se/social/toolbar/widget.js"></script>
   {{/extend}}
 
+  <script src="{{toolbarUrl}}"></script>
   {{{render 'head-scripts'}}}
   
   
