--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -7,13 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{description}}">
-  <link rel="shortcut icon" id="favicon" href="/student/kurser/static/icon/favicon">
+  <link rel="shortcut icon" id="favicon" href="{{proxyPrefix}}/static/icon/favicon">
 
   {{#if canonicalUrl}}
     <link href="{{canonicalUrl}}" rel="canonical">
   {{/if}}
 
   {{prefixStyle '/static/kth-style/css/kth-bootstrap.css' 'styles' 'screen'}}
+  {{prefixStyle '/assets/fonts.css' 'styles' 'screen'}}
   {{prefixStyle '/static/app.css' 'styles' 'screen'}}
 
   {{{render 'styles'}}}
@@ -24,18 +25,24 @@
   {{/if}}
 
   {{prefixScript '/static/vendor.js' 'head-scripts'}}
+  {{prefixModuleScript '/assets/js/index.js' 'head-scripts'}}
   {{prefixScript '/static/browserConfig' 'head-scripts'}}
-  {{prefixScript '/static/kth-style/js/menus.js' 'head-scripts'}}
   {{prefixScript '/static/kth-style/js/backtotop.js' 'head-scripts'}}
-
-  {{#extend 'head-scripts'}}
-    <script src="//www.kth.se/social/toolbar/widget.js"></script>
-  {{/extend}}
+  {{{render 'head-scripts'}}}
 
   <script src="{{toolbarUrl}}"></script>
-  {{{render 'head-scripts'}}}
-  
-  
+  <script type="module">
+    import { MenuPanel } from '{{proxyPrefix}}/assets/js/index.js'
+    MenuPanel.init(document.querySelector('.kth-header'), document.querySelectorAll('.kth-menu-item.search'))
+    MenuPanel.initModal(
+      document.querySelector('.kth-menu-item.collapsable'),
+      document.querySelector('.kth-menu-panel--modal')
+    )
+    MenuPanel.initTranslationModal(
+      document.querySelector(".kth-menu-item.language"),
+      document.querySelector(".kth-translation")
+    )
+  </script>
   {{#if instrumentationKey}}
     {{#if klaroAnalyticsConsentCookie}}
       <script type="text/javascript">
@@ -67,8 +74,10 @@
   {{else}}
   {{> kthHeader }}
   {{/if}}
-  <div class="container main standard withMainMenu">
-    {{{body}}}
+  <div class="kth-content">
+    <div class="row">
+        {{{body}}}
+    </div>
   </div>
   {{#if studentWeb}}
   {{> studentFooter}}
