add base shared layout style

--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -1,6 +1,5 @@
 @use '~@kth/style/scss/utils/reset.scss';
 @use '~@kth/style/scss/utils/mixins.scss';
-
 @use '~@kth/style/scss/components/logotype.scss';
 @use '~@kth/style/scss/components/search.scss';
 @use '~@kth/style/scss/components/alert.scss';
@@ -11,14 +10,13 @@
 @use '~@kth/style/scss/components/header.scss';
 @use '~@kth/style/scss/components/menu-item.scss';
 @use '~@kth/style/scss/components/menu-panel.scss';
+@use '~@kth/style/scss/components/content.scss';
+
+@import 'shared';
 
 %long-text-font-style {
   font-family: Georgia, 'garamond pro', garamond, 'times new roman', times, serif;
   word-break: break-word;
-}
-
-#app {
-  padding: 30px 0;
 }
 
 .nav-item.leaf.selected {
