--- a/server/views/partials/studentHeader.handlebars
+++ b/server/views/partials/studentHeader.handlebars
@@ -49,11 +49,9 @@
     </ul>
   </div>
 </header>
-
-{{!-- TODO: kth-style-10: Uppdatera breadcrumb-style --}}
-<div class='container articleNavigation'>
-  <div id='breadcrumbs-header' class='row justify-content-between'>
-    {{breadcrumbs breadcrumbsList lang}}
+<div class="kth-content articleNavigation">
+  <div class="row justify-content-between">
+    {{breadcrumbs breadcrumbsList lang}} 
     {{languageControl lang}}
   </div>
 </div>
